tests/NormalTests/paczka1/fuzzy1/63173465.err
Error in line 6: m4n S181 91,9
Error in line 15: A141 S181 18,5
Error in line 20: bxQCfK S181 59,0
Error in line 11: b38i1ezS7I A141 200,9
Error in line 40: m4n S648 20,59
